agregando la clase de boton hover a los demas links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h1>Especialistas en esterilización hospitalaria y desinfección de espacios</h1>
-        <a href="nosotros.html" class="botonLink">Mas Información</a>
+        <a href="nosotros.html" class="btnclaro">Mas Información</a>
       </div>
     </div>
 <!--    Foto 02  -->
@@ -66,7 +66,7 @@
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
-        <a href="esterilizacion.html" class="botonLink">Mas Información</a>
+        <a href="esterilizacion.html" class="btnclaro">Mas Información</a>
       </div>
     </div>
 <!--  Foto 03  -->
@@ -74,7 +74,7 @@
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>Líderes en bio-desinfección de superficies para cualquier sector o espacio.</h1>
-        <a href="biodesinfeccion.html" class="botonLink">Mas Información</a>
+        <a href="biodesinfeccion.html" class="btnclaro">Mas Información</a>
       </div>
     </div>
 <!--  Foto 04  -->
@@ -128,7 +128,7 @@
    
     <h3 class="titulo">Esterilización externa</h3>
     <p class="texto">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
-    <a href="esterilizacion.html" class="botonLink boton">Mas Información</a>
+    <a href="esterilizacion.html" class="btnclaro boton">Mas Información</a>
     <figure class="foto">
         <div id="carouselQS" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -167,7 +167,7 @@
    
     <h3 class="titulo">Bio-desinfección</h3>
     <p class="texto">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
-    <a href="biodesinfeccion.html" class="botonLink boton">Mas Información</a>
+    <a href="biodesinfeccion.html" class="btnclaro boton">Mas Información</a>
     <figure class="foto">
         <div id="carouselBD" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
