agregando linkd e contacto

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
 -->
         <li>
-            <a href="#" class="nav-link">Contacto</a>
+            <a href="#ContactoInd" class="nav-link">Contacto</a>
         </li>
     </ul>
     </div>
@@ -382,7 +382,7 @@
 </svg>
     </article>
 -->
-<footer>
+<footer id="ContactoInd">
     <aside>
         <h3>Contacto</h3>
 <!--
