--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -35,7 +35,7 @@
         </li>
 -->
         <li>
-            <a href="#" class="nav-link">Contacto</a>
+            <a href="index.html#ContactoInd" class="nav-link">Contacto</a>
         </li>
     </ul>
     </div>
