arreglando detalles mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar fixed-top  navbar-expand-md">
     <a href="index.html" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
-        <img src="img/logohealthic.png" class="enmobilhey">
+        <img src="img/logo-color.png" class="enmobilhey">
     </button>
     <div class="collapse navbar-collapse" id="NavBarM">
     
@@ -65,7 +65,7 @@
     <div class="carousel-item">
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
+        <h1>La primera central independiente de reprocesamiento de instrumental médico de ciclo completo de México y un referente en Sudamérica</h1>
         <a href="esterilizacion.html" class="btnclaro">Mas Información</a>
       </div>
     </div>
@@ -114,7 +114,7 @@
 <article class="QS">
    
     <h3 class="titulo">Quiénes Somos</h3>
-    <p class="texto"><b>Healthic ®</b> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
+    <p class="texto"><b>Healthic </b><sub>®</sub> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austríacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan a nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
     <a href="nosotros.html" class="boton btnobscuro" >Más información</a>
     <figure class="foto">
         <img src="img/logo.png" class="fotoQS">
