--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,7 @@
 <nav class="navbar fixed-top  navbar-expand-md">
     <a href="index.html" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
-        <img src="img/logohealthic.png" class="enmobilhey">
+        <img src="img/logo-color.png" class="enmobilhey">
     </button>
     <div class="collapse navbar-collapse" id="NavBarM">
     
@@ -117,24 +117,23 @@
            Healthic ® es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.
        </p>
        <h3>
-        Manifiesto
+        Propósito
        </h3>
        <p>
-            Conocemos el valor de la vida, por ellos tenemos la convicción de llevar bienestar a cualquier lugar que llegamos.<br>
-            Interactuamos armónicamente en sistemas a través del equilibrio y la ética con la que damos cada paso. <br>
-            Confianza es lo que ponen los clientes en nuestras manos, respondemos con certeza que se traduce en procesos seguros, calidad excepcional y seguridad en todo procedimiento en el que intervenimos. <br> 
+            Conocemos el valor de la vida, por ellos tenemos la convicción de que debemos llevar bienestar a cualquier lugar donde lleguemos. Interactuamos armónicamente en sistemas a través del equilibrio y la ética. Confianza es lo que los clientes depositan en nuestras manos, mientras que nosotros respondemos con certezas, que se traduce en procesos seguros y calidad excepcional.
+        
        </p>
        <h3>
         Misión
        </h3>
        <p>
-           Procesar, esterilizar y gestionar éticamente los recursos quirúrgicos, siempre confiables siempre a tiempo.
+           Satisfacer las necesidades del sector salud en reprocesamiento hospitalario y esterilización industrial, a través de la construcción y consolidación de un modelo de gestión de centrales destinadas a estos segmentos donde la alta calidad, la tecnología, el equipo humano y la solución a los problemas estratégicos, que colaboran con la generación de valor a nuestros clientes en dichos sectores, nos posicionan como referentes absolutos de la innovación y esterilización de excelencia en latinoamérica.
        </p>
        <h3>
         Visión
        </h3>
        <p>
-           Maximizar la seguridad en los procedimientos médicos a través de un servicio innovador de esterilización que impacte la vida de 15 millones de personas.
+           Perseguir la innovación y hacerlo con una mentalidad disruptiva que maximice la seguridad en los procedimientos médicos, a través de un servicio de esterilización y desinfección que impacte positivamente en la vida de millones de personas. Nuestra visión está puesta en el hoy y en el mundo que le legare mos a las generaciones venideras.
        </p>
             <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgIZQ">
             <path  transform="translate(-.148 -1437.3)" d="m0.525 1437.3c3.9 127.68 108.52 230.31 237.21 230.31h-237.58l0.377-230.31h-0.377"/>
