--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -15,7 +15,7 @@
 <nav class="navbar fixed-top  navbar-expand-md">
     <a href="index.html" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
-        <img src="img/logohealthic.png" class="enmobilhey">
+        <img src="img/logo-color.png" class="enmobilhey">
     </button>
     <div class="collapse navbar-collapse" id="NavBarM">
     
