--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -42,7 +42,7 @@
 </nav>
    
    <header class="Hstart">
-       <div id="carouselExampleCaptions" class="carousel slide" data-interval="false" data-ride="carousel" style="max-height: 43em;">
+       <div id="carouselExampleCaptions" class="carousel slide" data-interval="false" data-ride="carousel" style="max-height: 45vw;">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
