--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Healthic | Esterilización | Bio-desinfección</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -162,7 +162,7 @@
 </div>
     </figure>   
 </article>
- <hr>
+
 <article class="SERV2">
    
     <h3 class="titulo">Bio-desinfección</h3>
@@ -398,20 +398,20 @@
             <a href="mailto:info@healthic.com.mx" class="linkfoot">info@healthic.com.mx</a>    
         </address>
         <div class="socialicons">
-            <?xml version="1.0" encoding="UTF-8"?>
-        <svg viewBox="0 0 10.485 22.191" xmlns="http://www.w3.org/2000/svg">
+            <a href="#">
+            <svg viewBox="0 0 10.485 22.191" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-117.74 -4128.4)">
             <path class="feibuk" d="m120.12 4135.6h-2.377v3.8h2.377v11.218h4.58v-11.147h3.037l0.491-3.874h-3.528l0.065-1.853a1.255 1.255 0 0 1 1.226-1.5h2.237v-3.813h-3.743s-4.186 0-4.292 3.951z"/>
             </g>
-        </svg>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg viewBox="0 0 24.201 19.671" xmlns="http://www.w3.org/2000/svg">
+        </svg></a>
+           <a href="#">
+            <svg viewBox="0 0 24.201 19.671" xmlns="http://www.w3.org/2000/svg">
 <g transform="translate(-146.18 -4129.7)">
 <path class="feibuk" d="M170.381,4132.042a16.026,16.026,0,0,1-2.849.785.273.273,0,0,0-.028-.079,4.736,4.736,0,0,0,2.223-2.726,8.827,8.827,0,0,1-3.219,1.2,4.907,4.907,0,0,0-8.448,3.4,4.515,4.515,0,0,0,.115,1.044h-.183a12.566,12.566,0,0,1-10.125-5.078s-2.4,3.455,1.42,6.654a6.59,6.59,0,0,1-2.178-.6,5.108,5.108,0,0,0,3.877,4.86,4.432,4.432,0,0,1-2.115.18,5.05,5.05,0,0,0,4.564,3.374,7.69,7.69,0,0,1-3.1,1.7,8.673,8.673,0,0,1-4.155.3,13.939,13.939,0,0,0,21.661-11.448c0-.116,0-.235,0-.352.017-.2.04-.408.04-.618a32.59,32.59,0,0,0,2.5-2.587"/>
 </g>
-</svg>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg viewBox="0 0 24.176 23.643" xmlns="http://www.w3.org/2000/svg">
+</svg></a>
+           <a href="#">
+            <svg viewBox="0 0 24.176 23.643" xmlns="http://www.w3.org/2000/svg">
 <g transform="translate(-181.26 -4127.7)">
 <path class="a" d="M201.024,4138.982H185.68a4.422,4.422,0,0,0-4.418,4.421v3.548a4.417,4.417,0,0,0,4.418,4.416h15.344a4.416,4.416,0,0,0,4.414-4.416V4143.4A4.421,4.421,0,0,0,201.024,4138.982Zm-12.117,2.763h-1.431v7.091H186.1v-7.091h-1.424v-1.2h4.23Zm4.028,7.091H191.71v-.671a2.672,2.672,0,0,1-.7.565,1.474,1.474,0,0,1-.715.191.745.745,0,0,1-.636-.272,1.308,1.308,0,0,1-.217-.82v-5.113h1.226v4.693a.547.547,0,0,0,.074.315.282.282,0,0,0,.248.095.74.74,0,0,0,.346-.128,1.656,1.656,0,0,0,.374-.327v-4.648h1.225Zm4.438-1.265a1.515,1.515,0,0,1-.291,1,1,1,0,0,1-.825.35,1.535,1.535,0,0,1-.64-.139,1.614,1.614,0,0,1-.528-.418v.474h-1.234v-8.292h1.234v2.67a1.693,1.693,0,0,1,.528-.423,1.143,1.143,0,0,1,.565-.149,1.06,1.06,0,0,1,.881.388,1.823,1.823,0,0,1,.31,1.145Zm4.236-1.647h-2.342v1.152a1.244,1.244,0,0,0,.13.671.449.449,0,0,0,.408.184.5.5,0,0,0,.426-.161,1.316,1.316,0,0,0,.125-.694v-.28h1.253v.312a1.989,1.989,0,0,1-.458,1.424,1.839,1.839,0,0,1-1.374.469,1.674,1.674,0,0,1-1.294-.506,1.941,1.941,0,0,1-.47-1.387v-2.744a1.73,1.73,0,0,1,.522-1.3,1.828,1.828,0,0,1,1.333-.5,1.718,1.718,0,0,1,1.3.463,1.83,1.83,0,0,1,.445,1.334Z"/>
 <path class="a" d="M199.819,4143.638a.477.477,0,0,0-.419.173.863.863,0,0,0-.133.54v.619h1.089v-.619a.908.908,0,0,0-.129-.54A.465.465,0,0,0,199.819,4143.638Z"/>
@@ -420,23 +420,21 @@
 <path class="a" d="M193.145,4137.033a2.1,2.1,0,0,0,1.477-.5,1.749,1.749,0,0,0,.533-1.36v-3.485a1.607,1.607,0,0,0-.548-1.254,2.007,2.007,0,0,0-1.4-.487,2.258,2.258,0,0,0-1.495.464,1.532,1.532,0,0,0-.552,1.245v3.5a1.776,1.776,0,0,0,.54,1.363A2.042,2.042,0,0,0,193.145,4137.033Zm-.57-5.419a.429.429,0,0,1,.156-.356.6.6,0,0,1,.41-.14.66.66,0,0,1,.441.14.433.433,0,0,1,.169.356v3.668a.54.54,0,0,1-.169.422.606.606,0,0,1-.441.158.546.546,0,0,1-.416-.148.592.592,0,0,1-.15-.432Z"/>
 <path class="a" d="M197.229,4136.964a1.761,1.761,0,0,0,.8-.224,2.812,2.812,0,0,0,.79-.626v.744H200.2v-6.735h-1.382v5.11a1.678,1.678,0,0,1-.419.366.807.807,0,0,1-.385.138.364.364,0,0,1-.281-.1.57.57,0,0,1-.087-.352v-5.161h-1.372v5.63a1.406,1.406,0,0,0,.237.9A.857.857,0,0,0,197.229,4136.964Z"/>
 </g>
-</svg>
-
-<?xml version="1.0" encoding="UTF-8"?>
-<svg viewBox="0 0 25.251 25.94" xmlns="http://www.w3.org/2000/svg">
+</svg></a>
+           <a href="#">
+            <svg viewBox="0 0 25.251 25.94" xmlns="http://www.w3.org/2000/svg">
 <g transform="translate(-217.74 -4126.6)">
 <path class="a" d="m235.43 4152.5h-10.128a7.564 7.564 0 0 1-7.56-7.565v-10.8a7.575 7.575 0 0 1 7.56-7.571h10.123a7.58 7.58 0 0 1 7.577 7.567v10.8a7.569 7.569 0 0 1-7.572 7.569zm-10.128-23.347a4.984 4.984 0 0 0-4.977 4.978v10.8a4.98 4.98 0 0 0 4.977 4.981h10.123a4.987 4.987 0 0 0 4.993-4.981v-10.8a4.992 4.992 0 0 0-4.993-4.978z"/>
 <path class="a" d="m230.37 4146.4a6.863 6.863 0 0 1-6.859-6.856 6.792 6.792 0 0 1 6.7-6.86h0.189c4.168 0.126 6.913 2.889 6.823 6.885a6.874 6.874 0 0 1-6.853 6.831zm-0.156-11.134a4.206 4.206 0 0 0-4.124 4.278 4.276 4.276 0 1 0 8.552-0.03c0.059-2.611-1.515-4.165-4.311-4.248z"/>
 <path class="a" d="m238.79 4132.6a1.561 1.561 0 1 1-1.558-1.562 1.556 1.556 0 0 1 1.558 1.562"/>
 </g>
-</svg>
-
-<?xml version="1.0" encoding="UTF-8"?>
-<svg viewBox="0 0 23.341 23.341" xmlns="http://www.w3.org/2000/svg">
+</svg></a>
+           <a href="#">
+            <svg viewBox="0 0 23.341 23.341" xmlns="http://www.w3.org/2000/svg">
 <g transform="translate(-256.52 -4127.7)">
 <path class="a" d="m256.52 4127.7v23.341h23.341v-23.341zm7.652 18.64h-2.571v-8.992h2.573zm-1.306-10.776a1.582 1.582 0 1 1 1.619-1.581 1.546 1.546 0 0 1-1.619 1.581zm12.266 10.776h-2.574v-5.351a1.469 1.469 0 0 0-1.509-1.581 2.092 2.092 0 0 0-1.692 0.938v5.994h-2.575v-8.992h2.539v0.717a3.43 3.43 0 0 1 2.519-1.012 3.174 3.174 0 0 1 3.292 3.293z"/>
 </g>
-</svg>
+</svg></a>
 
         </div>
 <!--        <img src="img/logo02.png" class="imgfooter">-->
