--- a/index.html
+++ b/index.html
@@ -41,20 +41,18 @@
     </div>
 </nav>
     <!--Carusel fotos home-->
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-<!--
     <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
--->
+<!--    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>-->
   </ol>
   <div class="carousel-inner">
 <!--   Foto 01 -->
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h1>Especialistas en esterilización hospitalaria y desinfección de espacios</h1>
@@ -88,15 +86,15 @@
     </div>
 -->
     <!--  Foto 05 VIDEO  -->
+    <div class="carousel-item active">
+      <iframe src="https://player.vimeo.com/video/457958887?autoplay=1&loop=1&autopause=0&muted=1" width="100%" height="1000vw" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="vimeo-wrapper d-sm-block"></iframe>
 <!--
-    <div class="carousel-item">
-      <iframe src="https://player.vimeo.com/video/457958887" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
       <div class="carousel-caption d-none d-md-block">
         <h1>La primera central de esterilización externa en México</h1>
         <button>Más información</button>
       </div>
-    </div>
 -->
+    </div>
   </div>
 <!--  Flechas controladoras carusel-->
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
