--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+<!--    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>-->
 <!--    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>-->
   </ol>
   <div class="carousel-inner">
@@ -60,6 +60,7 @@
       </div>
     </div>
 <!--    Foto 02  -->
+<!--
     <div class="carousel-item">
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
@@ -67,6 +68,7 @@
         <a href="esterilizacion.html" class="btnclaro">Mas Información</a>
       </div>
     </div>
+-->
 <!--  Foto 03  -->
     <div class="carousel-item">
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
@@ -88,12 +90,10 @@
     <!--  Foto 05 VIDEO  -->
     <div class="carousel-item active">
       <iframe src="https://player.vimeo.com/video/457958887?autoplay=1&loop=1&autopause=0&muted=1" width="100%" height="1000vw" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="vimeo-wrapper d-sm-block"></iframe>
-<!--
       <div class="carousel-caption d-none d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Más información</button>
+        <h1>La primera central independiente de reprocesamiento de instrumental médico de ciclo completo de México</h1>
+        <a href="biodesinfeccion.html" class="btnclaro">Mas Información</a>
       </div>
--->
     </div>
   </div>
 <!--  Flechas controladoras carusel-->
