--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -42,24 +42,28 @@
 </nav>
    
    <header class="Hstart">
-       <div id="carouselExampleCaptions" class="carousel slide" data-interval="false" data-ride="carousel" style="max-height: 45vw;">
+       <div id="carouselExampleCaptions" class="carousel slide carBD" data-interval="false" data-ride="carousel" style="">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+<!--
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+-->
   </ol>
   <div class="carousel-inner">
 <!--   Foto 01 -->
-    <div class="carousel-item active">
+<!--
+    <div class="carousel-item ">
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h1>Bio-desinfección</h1>
-<!--        <button>Mas Información</button>-->
+        <button>Mas Información</button>
       </div>
     </div>
+-->
 <!--    Foto 02  -->
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>Bio-desinfección</h1>
@@ -67,15 +71,18 @@
       </div>
     </div>
 <!--  Foto 03  -->
+<!--
     <div class="carousel-item">
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>Bio-desinfección</h1>
-<!--        <button>Más información</button>-->
+        <button>Más información</button>
       </div>
     </div>
+-->
   </div>
 <!--  Flechas controladoras carusel-->
+<!--
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -84,6 +91,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+-->
   <svg viewBox="0 0 237.58 230.31" xmlns="http://www.w3.org/2000/svg" class="svgDER">
 <path transform="translate(-.148 -1437.3)" d="m237.36 1437.3c-3.9 127.68-108.52 230.31-237.21 230.31h237.58l-0.377-230.31h0.377"/>
 </svg>
@@ -134,13 +142,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-01.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/bd-02.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-03.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
@@ -194,13 +202,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-01.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/bd-02.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/bd-04.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
