--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -134,11 +134,11 @@
         </p>
       </div>
        <figure class="sliderHistoria">
-        <div id="carouselQS" class="carousel slide" data-ride="carousel">
+        <div id="carouselSOL" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselQS" data-slide-to="1"></li>
-    <li data-target="#carouselQS" data-slide-to="2"></li>
+    <li data-target="#carouselSOL" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselSOL" data-slide-to="1"></li>
+    <li data-target="#carouselSOL" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -151,11 +151,11 @@
       <img src="img/bd-03.png" class="d-block w-100" alt="...">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselSOL" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselQS" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselSOL" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -194,35 +194,35 @@
        
       
        <figure class="sliderLevantamiento">
-        <div id="carouselQS" class="carousel slide" data-ride="carousel">
+        <div id="carouselSOL2" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselQS" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselQS" data-slide-to="1"></li>
-    <li data-target="#carouselQS" data-slide-to="2"></li>
+    <li data-target="#carouselSOL2" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselSOL2" data-slide-to="1"></li>
+    <li data-target="#carouselSOL2" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/bd-01.png" class="d-block w-100" alt="...">
+      <img src="img/healhtic-desinfeccion2-21.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/bd-02.png" class="d-block w-100" alt="...">
+      <img src="img/healhtic-desinfeccion2-22.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/bd-04.png" class="d-block w-100" alt="...">
+      <img src="img/healhtic-desinfeccion2-23.png" class="d-block w-100" alt="...">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselSOL2" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselQS" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselSOL2" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
    
     </figure>
-        <a href="#" class="botonLink">Ficha Técnica</a>
+<!--        <a href="#" class="botonLink">Ficha Técnica</a>-->
    </article>
    <article class="beneficios">
        <h3>Beneficios</h3>
