textos de biodensifeccion en bullet

--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -175,11 +175,11 @@
        
        <h4 class="levantamiento">Realizamos una visita para levantamiento de medidas de las áreas a tratar.</h4>
        <ul>
-           <li>Sin intervención manual del operador lo que reduce el riesgo de infección por contacto.<br><br></li>
-           <li>Capaz de eliminar 99.99% de bacterias, virus y hongos, incluso influenza AH1N1 y COVID-19.<br><br></li>
-           <li>Se logra una desinfección de manera uniforme de aire, superficies y partes electrónicas sin riesgo de corrosión y oxidación.<br><br></li>
-           <li>Desinfección preventiva y correctiva.<br><br></li>
-           <li>Se ajusta a las necesidades de tiempo del cliente.</li>
+           <li>Máquina con turbina ionizante.<br><br></li>
+           <li>Agente desinfectante a base de   peróxido de hidrógeno y plata coloidal.<br><br></li>
+           <li>Monitoreo de áreas desinfectadas a través de indicadores químicos.<br><br></li>
+           <li>Profesional especializado en esterilización y bio-desinfección quien realiza todo el proceso.<br><br></li>
+           <li>Confinamiento de áreas en caso de ser requerido.</li>
        </ul>
 <!--
        <p>
