--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" ></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2" class="active"></li>
 <!--    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>-->
 <!--    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>-->
   </ol>
@@ -90,7 +90,7 @@
     <!--  Foto 05 VIDEO  -->
     <div class="carousel-item active">
       <iframe src="https://player.vimeo.com/video/465178039?autoplay=1&loop=1&autopause=0&muted=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="vimeo-wrapper d-sm-block"></iframe>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption d-md-block">
         <h1>La primera central independiente de reprocesamiento de instrumental médico de ciclo completo de México</h1>
         <a href="biodesinfeccion.html" class="btnclaro">Mas Información</a>
       </div>
@@ -137,16 +137,16 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/ee-01.webp" class="d-block w-100" alt="...">
+      <img src="img/ee-01.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/ee-02.webp" class="d-block w-100" alt="...">
+      <img src="img/ee-02.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/ee-03.webp" class="d-block w-100" alt="...">
+      <img src="img/ee-03.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/ee-04.webp" class="d-block w-100" alt="...">
+      <img src="img/ee-04.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
